# Advanced-Genomes-for-Evolutionary-Computing

./: Experiment Notebook.ipynb  HOX_evolution.py  Research Note 1.ipynb  Test_1.ipynb
.ipynb_checkpoints/: notebook-Copy1-checkpoint.ipynb  notebook-checkpoint.ipynb
hierarchical_genomes/: experiment_hierarchical_evolution.ipynb  pyproject.toml
hierarchical_genomes/hierarchical_genomes/: __init__.py  evolution_step_functions.py  genome_analysis.py  genome_transcription.py  helper_functions.py  hierarchical_genome_mutations_operations.py  legacy_code.py  simple_mutation_operations.py
