[tool.poetry]
name = "hierarchical-genomes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hierarchical_genomes"}]

[tool.poetry.dependencies]
python = "<3.11,>=3.9"

reservoirpy = "^0.3.9.post1"
matplotlib = "^3.8.0"
jupyter = "^1.0.0"
networkx = "^3.1"
scipy = "1.7.3"
numpy = "<1.23.0"
dask = "^2023.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
